--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Jogos da Professora Bruna - Início</title>
 </head>
 <body>
-    <a href=""></a>
+    <a href="/jogos/alfabeto-ilustrado.html">Alfabeto Ilustrao</a>
+    <a href="/jogos/desembaralhando-as-letras.html">Desembaralhando As Letras</a>
+    <a href="/jogos/jogo-da-forca.html">Jogo da Forca</a>
+    <a href="/jogos/jogo-da-memoria-vogais.html">Jogo da Memória - Vogais</a>
+    <a href="/jogos/sentimentos.html">Sentimentos</a>
 </body>
 </html>
