ajustes de pagina principal

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Jogos da Professora Bruna - Início</title>
 </head>
 <body>
-    <a href="/jogos/alfabeto-ilustrado.html">Alfabeto Ilustrao</a>
-    <a href="/jogos/desembaralhando-as-letras.html">Desembaralhando As Letras</a>
-    <a href="/jogos/jogo-da-forca.html">Jogo da Forca</a>
-    <a href="/jogos/jogo-da-memoria-vogais.html">Jogo da Memória - Vogais</a>
-    <a href="/jogos/sentimentos.html">Sentimentos</a>
+    <h1>Site da Professora Bruna</h1>
+    <div class="centralizar">
+        <a href="/jogos/alfabeto-ilustrado.html">Alfabeto Ilustrao</a> <br>
+        <a href="/jogos/desembaralhando-as-letras.html">Desembaralhando As Letras</a> <br>
+        <a href="/jogos/jogo-da-forca.html">Jogo da Forca</a> <br>
+        <a href="/jogos/jogo-da-memoria-vogais.html">Jogo da Memória - Vogais</a> <br>
+        <a href="/jogos/sentimentos.html">Sentimentos</a> <br>
+    </div>
 </body>
 </html>
