adicionado target blank

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Site da Professora Bruna</h1>
     <div class="centralizar">
-        <a href="/jogos/alfabeto-ilustrado.html">Alfabeto Ilustrao</a> <br>
-        <a href="/jogos/desembaralhando-as-letras.html">Desembaralhando As Letras</a> <br>
-        <a href="/jogos/jogo-da-forca.html">Jogo da Forca</a> <br>
-        <a href="/jogos/jogo-da-memoria-vogais.html">Jogo da Memória - Vogais</a> <br>
-        <a href="/jogos/sentimentos.html">Sentimentos</a> <br>
+        <a href="/jogos/alfabeto-ilustrado.html" target="_blank">Alfabeto Ilustrao</a> <br>
+        <a href="/jogos/desembaralhando-as-letras.html" target="_blank">Desembaralhando As Letras</a> <br>
+        <a href="/jogos/jogo-da-forca.html" target="_blank">Jogo da Forca</a> <br>
+        <a href="/jogos/jogo-da-memoria-vogais.html" target="_blank">Jogo da Memória - Vogais</a> <br>
+        <a href="/jogos/sentimentos.html" target="_blank">Sentimentos</a> <br>
     </div>
 </body>
 </html>
